# naht

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  SECURITY.md  aftman.toml
.claude/skills/continuous-improvement/: SKILL.md  continuous-improvement.workflow.js
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  prior-art.md  quickstart.md  spec.md
docs/superpowers/plans/: 2026-06-26-naht-site-redesign.md  2026-06-27-naht-docs-reader.md  2026-06-27-naht-site-redesign-v2.md
docs/superpowers/specs/: 2026-06-26-naht-site-redesign-design.md  2026-06-27-naht-docs-reader-design.md  2026-06-27-naht-site-redesign-v2-design.md
naht/: Cargo.toml
naht-core/: Cargo.toml
naht-core/examples/: wire_golden.rs
naht-core/src/: assets.rs  binary.rs  build.rs  frontmatter.rs  hash.rs  lib.rs  limits.rs  mapper.rs  merge.rs  protocol.rs  reconciler.rs  snapshot.rs  state.rs  vfs.rs
naht/src/: commands.rs  config.rs  lib.rs  logging.rs  main.rs  server.rs  session.rs  uploader.rs  watcher.rs
naht/tests/: cli.rs  daemon.rs  observability.rs  resilience.rs  watcher.rs
plugin/: README.md
plugin/src/: Apply.luau  Client.luau  Connection.luau  MessagePack.luau  Plugin.server.luau  Protocol.luau  Terrain.luau
plugin/tests/: run.luau
site/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.js  vitest.config.js
site/public/: robots.txt  site.webmanifest  sitemap.xml
site/src/: App.svelte  app.css  main.js  test-setup.js
site/src/content/en/: architecture.svx  cli.svx  configuration.svx  conflicts.svx  core-concepts.svx  (+9 more)
site/src/i18n/: dictionaries.test.js  en.js  fr.js  index.js  index.test.js
site/src/lib/: ArchitectureDiagram.svelte  BentoGrid.svelte  Card.svelte  ComparisonMatrix.svelte  DataFlowDiagram.svelte  FeatureRow.svelte  GuidedTerminal.svelte  Hero.svelte  Icon.svelte  Landing.svelte  LanguageToggle.svelte  Legal.svelte  LogStream.svelte  MergeDiagram.svelte  MergeEditor.svelte  SeamPanel.svelte  StateInspector.svelte  WorkspaceTree.svelte  reveal.js
(+25 files in other folders)
