[package]
name = "naht-core"
description = "The brain of Naht: VFS, path mapping, reconciliation, 3-way merge and state store. Zero network I/O."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
diffy = "0.5.0"
rbx_binary = "2.0.1"
rbx_dom_weak = "4.1.0"
rbx_reflection = "6.1.0"
rbx_xml = "2.0.1"
rmp-serde = "1.3.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
