[package]
name = "naht"
description = "The seam between your filesystem and Roblox Studio: the Naht CLI and localhost sync daemon."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "naht"
path = "src/lib.rs"

[[bin]]
name = "naht"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
naht-core = { path = "../naht-core" }
notify-debouncer-full = "0.7.0"
reqwest = { version = "0.12.28", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
rbx_binary = "2.0.1"
tempfile = "3.27.0"
